remove sticky bottom attribute from footer

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </main>
 
     <footer>
-        <nav class="navbar navbar-expand-lg fixed-bottom py-3" style="background-color: lightgray">
+        <nav class="navbar navbar-expand-lg py-3" style="background-color: lightgray">
             <div class="container">
                 <a href="#"
                    class="navbar-brand text-uppercase font-weight-bold">Logo</a>
