--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
             integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
             crossorigin=""></script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet"
           href="css/style.css">
 </head>
@@ -48,14 +50,10 @@
                 -->
             </div>
         </nav>
-        <div class="jumbotron " style="padding-top: 6rem">
-            <h1 class="display-4 text-center font-weight-bold">Unterstütze Deine
-                Clubs</h1>
-            <h1 class="display-4 text-center font-weight-bold">in der Krise</h1>
-            <h6 class="text-center" style="padding: 3rem; width: 50%;margin: auto">Eigentlich wärst du ja jetzt gerade
-                auf Tour
-                durch deine Clubs Sorge mit deinem Trinkgeld dafür, dass dein
-                Clubs auch nach der Krise noch da sind</h6>
+        <div class="jumbotron">
+            <h1 class="display-4 text-center font-weight-bold text-white jumbotron-title">DU FÜR DEINE
+                CLUBS <br>IN
+                STUTTGART</h1>
         </div>
     </header>
 
@@ -69,7 +67,8 @@
 
         <section style="background-color: lightgray; padding-bottom: 8rem">
             <div class="container">
-                <h3 class="text-center font-weight-bold" style="padding: 2rem">So funktioniert's</h3>
+                <h3 class="text-center font-weight-bold"
+                    style="padding: 2rem">So funktioniert's</h3>
                 <!-- Three columns of text below the carousel -->
                 <div class="row">
                     <div class="col-lg-4 text-center">
@@ -139,14 +138,17 @@
             </div>
         </section>
 
-        <section>
-            <div class="container" style="padding: 3rem">
+        <section id="map">
+            <div class="container"
+                 style="padding: 3rem">
                 <div class="row">
-                    <div class="col-lg-12 text-center" style="padding: 2rem">
+                    <div class="col-lg-12 text-center"
+                         style="padding: 2rem">
                         <h3 class="text-center font-weight-bold">Warum ist es
                             nötig</h3>
                     </div><!-- /.col-lg-4 -->
-                    <div class="col-lg-12 text-center" style="padding-bottom: 6rem">
+                    <div class="col-lg-12 text-center"
+                         style="padding-bottom: 6rem">
                         It is a long established fact that a reader will be
                         distracted by the readable content of a page when
                         looking at its layout. The point of using Lorem Ipsum is
@@ -166,14 +168,16 @@
     </main>
 
     <footer>
-        <nav class="navbar navbar-expand-lg py-3" style="background-color: lightgray">
+        <nav class="navbar navbar-expand-lg py-3"
+             style="background-color: lightgray">
             <div class="container">
                 <a href="#"
                    class="navbar-brand text-uppercase font-weight-bold">Logo</a>
                 <div id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li
-                                class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Impressum
+                                class="nav-item"><a href="#"
+                                                    class="nav-link text-uppercase font-weight-bold">Impressum
                         </a></li>
                         <li
                                 class="nav-item"><a href="#"
