--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet"
           href="css/style.css">
+    <link rel="stylesheet"
+          href="css/map.css">
 </head>
 
 <body>
@@ -67,9 +69,65 @@
 
         </section>
         <section class="inno-section">
-            <div class="d-flex justify-content-center">
-                <div id="mapid"
-                     style="width: 600px; height: 400px;"></div>
+            <div class="mapContainer">
+                <div class="mapSideBar font-montserrat">
+                    <div class="searchInputContainer">
+                        <input class="searchInput" id="searchInput" type="text" placeholder="Suchen" />
+                    </div>
+                    <div class="storeList">
+                        <div class="store">
+                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
+                            <div class="storeInfo">
+                                <a href="#" class="storeName">Sultan Saray</a>
+                                <div class="storeLocation">
+                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
+                                    <div class="storeCity">70173 Stuttgart</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="store">
+                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
+                            <div class="storeInfo">
+                                <a href="#" class="storeName">Sultan Saray</a>
+                                <div class="storeLocation">
+                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
+                                    <div class="storeCity">70173 Stuttgart</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="store">
+                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
+                            <div class="storeInfo">
+                                <a href="#" class="storeName">Sultan Saray</a>
+                                <div class="storeLocation">
+                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
+                                    <div class="storeCity">70173 Stuttgart</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="store">
+                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
+                            <div class="storeInfo">
+                                <a href="#" class="storeName">Sultan Saray</a>
+                                <div class="storeLocation">
+                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
+                                    <div class="storeCity">70173 Stuttgart</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="store">
+                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
+                            <div class="storeInfo">
+                                <a href="#" class="storeName">Sultan Saray</a>
+                                <div class="storeLocation">
+                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
+                                    <div class="storeCity">70173 Stuttgart</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="map" id="map"></div>
             </div>
         </section>
 
@@ -189,48 +247,7 @@
     </footer>
 </div>
 
-<script>
-
-    var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-
-    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-        maxZoom: 18,
-        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-            '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-            'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-        id: 'mapbox/streets-v11',
-        tileSize: 512,
-        zoomOffset: -1
-    }).addTo(mymap);
-
-    L.marker([51.5, -0.09]).addTo(mymap)
-        .bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
-
-    L.circle([51.508, -0.11], 500, {
-        color: 'red',
-        fillColor: '#f03',
-        fillOpacity: 0.5
-    }).addTo(mymap).bindPopup("I am a circle.");
-
-    L.polygon([
-        [51.509, -0.08],
-        [51.503, -0.06],
-        [51.51, -0.047]
-    ]).addTo(mymap).bindPopup("I am a polygon.");
-
-
-    var popup = L.popup();
-
-    function onMapClick(e) {
-        popup
-            .setLatLng(e.latlng)
-            .setContent("You clicked the map at " + e.latlng.toString())
-            .openOn(mymap);
-    }
-
-    mymap.on('click', onMapClick);
-
-</script>
+<script src="./js/map.js" />
 
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
