ListView shows stores according to json file

--- a/index.html
+++ b/index.html
@@ -65,72 +65,21 @@
     </header>
 
     <main>
-        <section class="inno-section">
 
-        </section>
         <section class="inno-section">
             <div class="mapContainer">
                 <div class="mapSideBar font-montserrat">
                     <div class="searchInputContainer">
                         <input class="searchInput" id="searchInput" type="text" placeholder="Suchen" />
                     </div>
-                    <div class="storeList">
-                        <div class="store">
-                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
-                            <div class="storeInfo">
-                                <a href="#" class="storeName">Sultan Saray</a>
-                                <div class="storeLocation">
-                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
-                                    <div class="storeCity">70173 Stuttgart</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="store">
-                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
-                            <div class="storeInfo">
-                                <a href="#" class="storeName">Sultan Saray</a>
-                                <div class="storeLocation">
-                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
-                                    <div class="storeCity">70173 Stuttgart</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="store">
-                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
-                            <div class="storeInfo">
-                                <a href="#" class="storeName">Sultan Saray</a>
-                                <div class="storeLocation">
-                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
-                                    <div class="storeCity">70173 Stuttgart</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="store">
-                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
-                            <div class="storeInfo">
-                                <a href="#" class="storeName">Sultan Saray</a>
-                                <div class="storeLocation">
-                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
-                                    <div class="storeCity">70173 Stuttgart</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="store">
-                            <img class="storeImage" src="./img/bar.jpeg" alt="bar" />
-                            <div class="storeInfo">
-                                <a href="#" class="storeName">Sultan Saray</a>
-                                <div class="storeLocation">
-                                    <div class="storeAddress">Lautenschlagerstrasse 20</div>
-                                    <div class="storeCity">70173 Stuttgart</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="storeList" id="storeList"></div>
                 </div>
                 <div class="map" id="map"></div>
             </div>
+        
         </section>
 
+        
         <section class="inno-section">
             <div class="container">
                 <h3 class="text-center font-weight-bold mt-5 mb-5">So unterstützt Du dein Lieblingslokal</h3>
@@ -247,7 +196,8 @@
     </footer>
 </div>
 
-<script src="./js/map.js" />
+<script src="./js/map.js" ></script>
+<script src="./js/script.js"></script>
 
 <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
         integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
