update footer layout and style

--- a/index.html
+++ b/index.html
@@ -175,24 +175,20 @@
     </main>
 
     <footer class="inno-footer">
-        <nav class="navbar navbar-expand-lg py-3">
-            <div class="container">
-                <a href="#"
-                   class="navbar-brand text-uppercase font-weight-bold">Logo</a>
-                <div id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li
-                                class="nav-item"><a href="#"
-                                                    class="nav-link text-uppercase font-weight-bold">Impressum
-                        </a></li>
-                        <li
-                                class="nav-item"><a href="#"
-                                                    class="nav-link text-uppercase font-weight-bold">Datenschutz
-                        </a></li>
-                    </ul>
+        <div class="container">
+            <div class="row d-flex align-items-center">
+                <div class="fonter-link" style="margin-left: auto">
+                    <a href="#" class="footer-link">Impressum</a>
+                </div>
+                <div class="footer-logo-wrapper">
+                    <img src="./img/logo_dark.png"
+                         alt="">
+                </div>
+                <div class="" style="margin-right: auto">
+                    <a href="#" class="footer-link">Datenschutz</a>
                 </div>
             </div>
-        </nav>
+        </div>
     </footer>
 </div>
 
